--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,6 +5,7 @@ on:
     workflows: ["CI — CV (Ruff + Pytest)"]
     types:
       - completed
+  workflow_dispatch:
 
 permissions:
   contents: write
