--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,12 +6,21 @@ on:
     types:
       - completed
 
+  workflow_dispatch:
+    inputs:
+      force:
+        description: "Forzar generación manual del CV"
+        required: false
+        default: "yes"
+
 permissions:
   contents: read
 
 jobs:
   build-cv:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: >
+      github.event.workflow_run.conclusion == 'success' ||
+      github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
 
     steps:
