feat: cambiar argparse a typer

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Install Dependecies
         run: |
           sudo apt-get update
-          sudo apt-get install -y pandoc texlive-xetex texlive-latex-recommended texlive-fonts-recommended
-          pip install pypandoc
+          sudo apt-get install -y pandoc texlive-xetex texlive-latex-recommended texlive-fonts-recommended 
+          pip install pypandoc typer
 
       - name: Run CV generation
         run: |
