--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff pytest pypandoc
+          pip install ruff pytest pypandoc typer
 
       - name: Run Ruff (lint)
         run: |
@@ -45,7 +45,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pypandoc
+          pip install pytest pypandoc typer
 
       - name: Run Pytest (basic script checks)
         run: |
